<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:columnCount="2"
    android:rowCount="3"
    >
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/business_card"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        android:layout_margin="12dp"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/business"
            android:layout_gravity="center"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/business"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/entertainment_card"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        android:layout_margin="12dp"
        >
        <com.google.android.material.imageview.ShapeableImageView

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/flat"
            android:layout_gravity="center"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/entertainment"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/health_card"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        android:layout_margin="12dp"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/health"
            android:layout_gravity="center"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/health"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/science_card"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        android:layout_margin="12dp"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/science"
            android:layout_gravity="center"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/science"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/technology_card"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        android:layout_margin="12dp"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/technology"
            android:layout_gravity="center"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/technolgy"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sports_card"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        android:layout_margin="12dp"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/sports"
            android:layout_gravity="center"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/sports"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />

    </com.google.android.material.card.MaterialCardView>

</GridLayout>